contrib/codegen/tests/ui-fail-stable/database-types.stderr
error[E0277]: the trait bound `Unknown: rocket_contrib::databases::Poolable` is not satisfied
 --> $DIR/database-types.rs:7:10
  |
7 | struct A(Unknown);
  |          ^^^^^^^ the trait `rocket_contrib::databases::Poolable` is not implemented for `Unknown`

error[E0277]: the trait bound `std::vec::Vec<i32>: rocket_contrib::databases::Poolable` is not satisfied
  --> $DIR/database-types.rs:10:10
   |
10 | struct B(Vec<i32>);
   |          ^^^ the trait `rocket_contrib::databases::Poolable` is not implemented for `std::vec::Vec<i32>`
